Remove force sync logic from billing producers since it is no longer needed after UMB integration